fix: revert z-index from 20 to 2

--- a/src/styles/Extn-TabBar.less
+++ b/src/styles/Extn-TabBar.less
@@ -5,7 +5,7 @@
     border-bottom: none;
     position: relative;
     overflow: hidden;
-    z-index: 20;
+    z-index: 2;
 }
 
 .dark .tab-bar-container {
